Fixed drag proxy being invisible when in content is used overflow:hidden

--- a/src/webroot/cms/content-manager/pagecontent/iframe.css.less
+++ b/src/webroot/cms/content-manager/pagecontent/iframe.css.less
@@ -168,6 +168,7 @@
 	padding: 0;
 	background: none;
 	display: block !important;
+	z-index: 110;
 	
 	/* Remove animation, looks better without it */
 	.transition-property (none);
